--- a/auswertung.html
+++ b/auswertung.html
@@ -48,10 +48,16 @@
   <div class="container">
     <h1>Ihre Auswertung</h1>
     <div class="score-box">
-      <p><strong>Score:</strong> <span id="score">-</span></p>
+      <p><strong>Vielen Dank für die Teilnahme an diesem Readiness Check!</strong></p>
+<p><strong>Score:</strong> <span id="score">-</span></p>
       <p><strong>Empfehlung:</strong> <span id="empfehlung">-</span></p><p><strong><span id="version"></span></strong></p>
     </div>
     <a class="cta" href="https://meetings-eu1.hubspot.com/luigi-lopez">Jetzt Beratung buchen</a>
+    <div style="margin-top: 20px;">
+      <a href="index.html" class="cta">Zurück zur Startseite</a>
+    </div>
+  </div>
+
   </div>
 
   <script>
