--- a/readiness-check.html
+++ b/readiness-check.html
@@ -79,7 +79,7 @@
     function renderFrage() {
       if (frage >= fragen.length) {
         localStorage.setItem("readinessAntworten", JSON.stringify(antworten));
-        window.location.href = "auswertung-final.html";
+        window.location.href = "auswertung.html";
         return;
       }
 
